project(cmake-micromamba LANGUAGES C CXX)

list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 CXX_STD_11)

micromamba(VERSION 1.5.1-2)
if(NOT "${CXX_STD_11}" STREQUAL "-1")
  micromamba_environment(CHANNELS conda-forge DEPENDENCIES fmt)
  find_package(fmt REQUIRED)
  add_executable(cmake-micromamba-1.0.test "${CMAKE_CURRENT_SOURCE_DIR}/FetchContent/main.cpp")
  target_link_libraries(cmake-micromamba-1.0.test fmt::fmt)
  install(TARGETS cmake-micromamba-1.0.test RUNTIME DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/install")
else()
  micromamba_environment(CHANNELS conda-forge)
endif()

micromamba(VERSION 1.5.3-0)
if(NOT "${CXX_STD_11}" STREQUAL "-1")
  micromamba_environment(CHANNELS conda-forge DEPENDENCIES fmt)
  find_package(fmt REQUIRED)
  add_executable(cmake-micromamba-1.5.test "${CMAKE_CURRENT_SOURCE_DIR}/FetchContent/main.cpp")
  target_link_libraries(cmake-micromamba-1.5.test fmt::fmt)
  install(TARGETS cmake-micromamba-1.5.test RUNTIME DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/install")
else()
  micromamba_environment(CHANNELS conda-forge)
endif()

if("${CMAKE_VERSION}" VERSION_GREATER 3.11)
  add_subdirectory(FetchContent)
endif()
